Possible fix for collapsed navbar issue

--- a/public/scss/partials/_navbar.scss
+++ b/public/scss/partials/_navbar.scss
@@ -94,7 +94,7 @@
             text-align: center;
         }
 
-        &:active li {
+        &:focus li {
             display: block;
         }
     }
